--- a/src/components/PartHeading/PartHeading.css
+++ b/src/components/PartHeading/PartHeading.css
@@ -10,7 +10,7 @@
 
 .overview-title {
   font-size: 16px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-family: 'Motiva Sans';
 }
 
