--- a/src/pages/AdminDashboard/GameApprovePage.css
+++ b/src/pages/AdminDashboard/GameApprovePage.css
@@ -84,9 +84,19 @@ button:active {
     font-weight: bold;
 }
 
-.request-item{
+.request-items{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+}
+.request-items :nth-child(2) {
+    flex: 2;
+    /* text-align: center; */
+}
+.request-items :nth-child(3) {
+    flex: 1;
+}
+.request-items :nth-child(4) {
+    flex: 1;
 }
