--- a/src/pages/SendGameToAdmin.css
+++ b/src/pages/SendGameToAdmin.css
@@ -17,8 +17,14 @@
   justify-content: flex-start;
   align-items: center;
 }
-
+.form-border h1{
+  margin-left: 10%;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+}
 .form-border {
+  margin-top: 100px !important;
   font-family: 'Motiva Sans Light';
   font-size: 13px;
   border: 1px solid #000000;
@@ -43,9 +49,9 @@
 .game-avatar {
   margin-left: 10%;
   margin-top: 30px;
-  width: 150px;
+  width: 30%;
   /* Bigger image */
-  height: 150px;
+  height: 30%;
   border-radius: 15px;
 }
 
@@ -89,6 +95,7 @@
   display: flex;
   justify-content: space-between;
   gap: 60px;
+  width: 100%;
   /* Adds space between the two columns */
 }
 
@@ -134,7 +141,7 @@
   outline: none;
   background-color: #1A1C1F;
   resize: vertical;
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   color: white;
 }
@@ -148,8 +155,7 @@
 .inner-image {
   overflow-x: auto;
   white-space: nowrap;
-  display: flex;
-  gap: 10px;
+  /* display: flex; */
   /* Space between images */
 }
 
@@ -159,12 +165,20 @@
   height: 100px;
   object-fit: cover;
   border-radius: 5px;
+  margin-right: 10px;
 }
 
 .inner-image button {
   width: 150px;
   height: 100px;
   border-radius: 5px;
+  border: 2px dashed #ccc;
+  background: #3D4450;
+  margin-right: 10px;
+}
+
+.inner-image button:hover{
+  background:#2c313a;
 }
 
 .game-file {
