--- a/src/pages/SendUserFeedback.css
+++ b/src/pages/SendUserFeedback.css
@@ -4,11 +4,12 @@
     box-sizing: border-box;
 }
 .sendfeedback-container {
-    max-width: 700px;
+    width: 50%;
     margin: 40px auto;
     padding: 30px;
     background: #23272B;
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+    border: 1px solid #000000;
     border-radius: 15px;
     font-family: 'Segoe UI', sans-serif;
   }
