--- a/src/pages/AdminDashboard/GameApprovePage.css
+++ b/src/pages/AdminDashboard/GameApprovePage.css
@@ -91,12 +91,14 @@ button:active {
     padding: 10px;
 }
 .request-items :nth-child(2) {
-    flex: 2;
+    flex: 1.8;
     /* text-align: center; */
 }
 .request-items :nth-child(3) {
     flex: 1;
+    /* text-align: center; */
 }
 .request-items :nth-child(4) {
     flex: 1;
+    /* text-align: center; */
 }
