--- a/src/pages/SendGameToAdmin.css
+++ b/src/pages/SendGameToAdmin.css
@@ -167,7 +167,9 @@
   border-radius: 5px;
   margin-right: 10px;
 }
-
+.remove-icon{
+  margin-right: 10px;
+}
 .inner-image button {
   width: 150px;
   height: 100px;
