--- a/src/pages/HomePage/BrowseByTag.css
+++ b/src/pages/HomePage/BrowseByTag.css
@@ -1,3 +1,10 @@
+.publisher-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: transform 0.2s ease-in-out, filter 0.2s ease-in-out;
+}
 .browse-tags {
     margin: 16px 0;
     position: relative;
