--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -4,6 +4,12 @@
     height: 46vw;
   }
 } */
+.video-banner {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  border-radius: 4px;
+}
 .homepage-content {
   width: 100%;
 }
@@ -33,7 +39,6 @@
   gap: 20px;
   min-width: 0; /* Quan trọng để flexbox không bị tràn */
 }
-
 
 .fullscreen-video {
   margin-left: 50%;
