--- a/src/components/EmailChange/EmailSettings.css
+++ b/src/components/EmailChange/EmailSettings.css
@@ -31,3 +31,9 @@
 .feedback-success {
   color: #66c0f4;
 }
+.changeEmail {
+  font-size: 20px;
+  font-weight: bold;
+  color: #fff;
+  margin-bottom: 15px;
+}
