--- a/src/components/Header/UserDropBox.css
+++ b/src/components/Header/UserDropBox.css
@@ -29,13 +29,13 @@
 }
 
 
-.dropdown-menu a {
+.dropdown-menu .dropdown-item {
   display: block;
   color: white;
   padding: 8px 16px;
   text-decoration: none;
 }
 
-.dropdown-menu a:hover {
+.dropdown-menu .dropdown-item:hover {
   background-color: #1b2838;
 }
