--- a/src/pages/HomePage/BrowseByPublisher.css
+++ b/src/pages/HomePage/BrowseByPublisher.css
@@ -1,4 +1,4 @@
-.browse-tags {
+.browse-publishers {
     margin: 16px 0;
     position: relative;
     font-weight: normal;
@@ -6,18 +6,18 @@
     transition: padding 0.25s;
 }
 
-.browse-tags .title {
+.browse-publishers .title {
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 1px;
     color: white;
 }
 
-.browse-tags .carousel-fade .carousel-item {
+.browse-publishers .carousel-fade .carousel-item {
     transition: opacity 400ms ease;
 }
 
-.browse-tags .carousel-item .capsule-cnt {
+.browse-publishers .carousel-item .capsule-cnt {
     width: 24%;
     margin-top: 16px;
     margin-bottom: 16px;
@@ -27,7 +27,7 @@
     overflow: hidden;
 }
 
-.browse-tags .capsule-cnt img {
+.browse-publishers .capsule-cnt img {
     width: 100%;
     display: block;
     filter: saturate(0.7);
@@ -36,12 +36,12 @@
     border: none;
 }
 
-.browse-tags .capsule-cnt:hover img {
+.browse-publishers .capsule-cnt:hover img {
     transform: scale(1.05);
     filter: brightness(1.1);
 }
 
-.browse-tags .capsule-cnt .gradient {
+.browse-publishers .capsule-cnt .gradient {
     position: absolute;
     top: 0;
     height: 100%;
@@ -50,11 +50,11 @@
     transition: opacity 0.2s ease-in-out;
 }
 
-.browse-tags .capsule-cnt:hover .gradient {
+.browse-publishers .capsule-cnt:hover .gradient {
     opacity: 0.5;
 }
 
-.browse-tags .capsule-cnt .label-ctn {
+.browse-publishers .capsule-cnt .label-ctn {
     position: absolute;
     bottom: 50px;
     text-align: center;
@@ -64,11 +64,11 @@
     transition: transform 0.2s ease-in-out;
 }
 
-.browse-tags .capsule-cnt:hover .label-ctn {
+.browse-publishers .capsule-cnt:hover .label-ctn {
     transform: translateY(44px);
 }
 
-.browse-tags .capsule-cnt .label-ctn .label {
+.browse-publishers .capsule-cnt .label-ctn .label {
     display: block;
     width: fit-content;
     margin: 0 auto;
@@ -83,17 +83,17 @@
     border-radius: 4px;
 }
 
-.browse-tags .carousel-control-prev,
-.browse-tags .carousel-control-next {
+.browse-publishers .carousel-control-prev,
+.browse-publishers .carousel-control-next {
   width: 40px;
   top: 50%;
   transform: translateY(-50%);
 }
 
-.browse-tags .carousel-control-prev {
+.browse-publishers .carousel-control-prev {
   left: -40px;
 }
 
-.browse-tags .carousel-control-next {
+.browse-publishers .carousel-control-next {
   right: -40px;
 }
