--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,11 @@
   display: flex;
   flex-direction: column;
 }
+
 .app-container.transparent {
   background: transparent;
 }
+
 .logo {
   /*Remove height by Phan NT Son*/
   /*Remove padding by Phan NT Son*/
@@ -46,4 +48,19 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.media-with-caption {
+  position: relative;
+  display: inline-block;
+  height: 100%;
+}
+
+.media-with-caption::after {
+  position: absolute;
+  content: "Image © Steam - For educational use only";
+  font-size: 0.4rem;
+  color: #aaa;
+  top: 0;
+  left: 0;
 }
